Responsive Contact Added Successfully

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
 
+    <!-- ================= Font Awesome CDN Link ============= -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- ==================== Daisy Ui CDN Link ================== -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -884,15 +887,16 @@
         <section class="mb-10 md:mb-24">
             <div
                 class="heading text-center space-y-4 md:space-y-6 border-dashed border-t border-b border-[#13131833] py-6 md:py-8">
-                <h2 class="text-[22px] md:text-4xl font-extrabold text-[#131318]">Our New Products</h2>
-                <p class="text-sm font-medium text-[#13131899] w-full md:text-base md:w-[600px] mx-auto capitalize">Our
-                    roster is a mosaic of talent, featuring world-class athletes who embody the spirit of teamwork and
-                    the pursuit of greatness</p>
+                <h2 class="text-[22px] md:text-4xl font-extrabold text-[#131318]">Clients Question</h2>
+                <p class="text-sm font-medium text-[#13131899] w-full md:text-base md:w-[600px] mx-auto capitalize">
+                    It seems like you have a question about clients or client-related matters. Could you please provide
+                    more details or clarify your question?</p>
             </div>
 
 
             <!-- ================= Client Question Container ===================== -->
-            <div class="flex flex-col lg:flex-row lg:gap-5 lg:items-center mt-6 p-6 border border-[#1313181A] space-y-5 lg:space-y-0 rounded-2xl">
+            <div
+                class="flex flex-col lg:flex-row lg:gap-5 lg:items-center mt-6 p-6 border border-[#1313181A] space-y-5 lg:space-y-0 rounded-2xl">
                 <div class="flex-1">
                     <img src="./Images/faq.png" class="w-full h-auto object-cover" alt="faq image">
                 </div>
@@ -906,7 +910,9 @@
                             Our Equipment
                         </div>
                         <div class="collapse-content">
-                            <p class="text-sm w-full sm:text-base font-normal text-[#13131899]">Stay ahead with cutting-edge technology embedded in each piece of equipment. We integrate the latest innovations to meet the demands of modern users.</p>
+                            <p class="text-sm w-full sm:text-base font-normal text-[#13131899]">Stay ahead with
+                                cutting-edge technology embedded in each piece of equipment. We integrate the latest
+                                innovations to meet the demands of modern users.</p>
                         </div>
                     </div>
                     <!-- ============ Accordian Item 1 ============== -->
@@ -918,7 +924,9 @@
                             Hockey Training
                         </div>
                         <div class="collapse-content">
-                            <p class="text-sm sm:text-base font-normal text-[#13131899]">Train under the guidance of our experienced coaching staff, bringing a wealth of knowledge, passion, and dedication to the rink.</p>
+                            <p class="text-sm sm:text-base font-normal text-[#13131899]">Train under the guidance of our
+                                experienced coaching staff, bringing a wealth of knowledge, passion, and dedication to
+                                the rink.</p>
                         </div>
                     </div>
                     <!-- ============ Accordian Item 2 ============== -->
@@ -930,43 +938,51 @@
                             Private Lessons
                         </div>
                         <div class="collapse-content">
-                            <p class="text-sm sm:text-base font-normal text-[#13131899]">Discover the personalized journey to success with our private lessons. Whether you're a beginner looking to build a solid foundation</p>
+                            <p class="text-sm sm:text-base font-normal text-[#13131899]">Discover the personalized
+                                journey to success with our private lessons. Whether you're a beginner looking to build
+                                a solid foundation</p>
                         </div>
                     </div>
                     <!-- ============ Accordian Item 3 ============== -->
 
                     <!-- ============ Accordian Item 4 ============== -->
                     <div class="collapse collapse-plus rounded-none border-b border-[#1313181A]">
-                        <input type="radio" name="my-accordion-3"/>
+                        <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-xl font-extrabold text-[#131318]">
                             Ski Touring
                         </div>
                         <div class="collapse-content">
-                            <p class="text-sm sm:text-base font-normal text-[#13131899]">Experience the thrill of untouched snowscapes and the serenity of pristine alpine vistas with our ski touring adventures.</p>
+                            <p class="text-sm sm:text-base font-normal text-[#13131899]">Experience the thrill of
+                                untouched snowscapes and the serenity of pristine alpine vistas with our ski touring
+                                adventures.</p>
                         </div>
                     </div>
                     <!-- ============ Accordian Item 4 ============== -->
 
                     <!-- ============ Accordian Item 5 ============== -->
                     <div class="collapse collapse-plus rounded-none border-b border-[#1313181A]">
-                        <input type="radio" name="my-accordion-3"/>
+                        <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-xl font-extrabold text-[#131318]">
                             Booking
                         </div>
                         <div class="collapse-content">
-                            <p class="text-sm sm:text-base font-normal text-[#13131899]">Ready to embark on an unforgettable adventure or indulge in a relaxing escape? Booking with us is quick, easy, and the first step to turning your plans into reality.</p>
+                            <p class="text-sm sm:text-base font-normal text-[#13131899]">Ready to embark on an
+                                unforgettable adventure or indulge in a relaxing escape? Booking with us is quick, easy,
+                                and the first step to turning your plans into reality.</p>
                         </div>
                     </div>
                     <!-- ============ Accordian Item 5 ============== -->
 
                     <!-- ============ Accordian Item 6 ============== -->
                     <div class="collapse collapse-plus rounded-none border-b border-[#1313181A]">
-                        <input type="radio" name="my-accordion-3"/>
+                        <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-xl font-extrabold text-[#131318]">
                             Pricings
                         </div>
                         <div class="collapse-content">
-                            <p class="text-sm sm:text-base font-normal text-[#13131899]">Our pricing structure is designed to cater to your needs, ensuring affordability without compromising on quality</p>
+                            <p class="text-sm sm:text-base font-normal text-[#13131899]">Our pricing structure is
+                                designed to cater to your needs, ensuring affordability without compromising on quality
+                            </p>
                         </div>
                     </div>
                     <!-- ============ Accordian Item 6 ============== -->
@@ -975,6 +991,141 @@
             </div>
         </section>
         <!-- ===================== Client Question Section End =================== -->
+
+
+        <!-- ===================== Contact Section End =================== -->
+        <section class="mb-10 md:mb-24">
+            <div
+                class="heading text-center space-y-4 md:space-y-6 border-dashed border-t border-b border-[#13131833] py-6 md:py-8">
+                <h2 class="text-[22px] md:text-4xl font-extrabold text-[#131318]">Get In Touch</h2>
+                <p class="text-sm font-medium text-[#13131899] w-full md:text-base md:w-[600px] mx-auto capitalize">We
+                    love hearing from you! Whether you have questions, feedback, or you're ready to start an exciting
+                    journey with us, we're here to help</p>
+            </div>
+
+            <!-- ============== Contact Container ================ -->
+            <div class="grid grid-cols-1 lg:grid-cols-12 gap-6 mt-6 items-center">
+                <!-- ========== Contact Info ============== -->
+                <div class="p-6 col-auto lg:col-span-6 border space-y-4 border-[#1313181A] rounded-2xl">
+
+                    <!-- =========== Contact Info item 1 ============= -->
+                    <div class="p-6 rounded-2xl bg-[#bced6e1a]">
+                        <img class="mb-6" src="./Images/call.png" alt="call image">
+                        <p class="mb-3 text-base font-normal text-[#13131866]">Phone Number :</p>
+                        <h4 class="text-lg font-extrabold text-[#131318]">(+62) 123-321-543</h4>
+                    </div>
+                    <!-- =========== Contact Info item 1 ============= -->
+
+                    <!-- =========== Contact Info item 2 ============= -->
+                    <div class="p-6 rounded-2xl bg-[#bced6e1a]">
+                        <img class="mb-6" src="./Images/mail.png" alt="mail image">
+                        <p class="mb-3 text-base font-normal text-[#13131866]">Email :</p>
+                        <h4 class="text-base sm:text-lg font-extrabold text-[#131318]">hockeys@support.com</h4>
+                    </div>
+                    <!-- =========== Contact Info item 2 ============= -->
+
+                    <!-- =========== Contact Info item 3 ============= -->
+                    <div class="p-6 rounded-2xl bg-[#629CF31A]">
+                        <img class="mb-6" src="./Images/location.png" alt="location image">
+                        <p class="mb-3 text-base font-normal text-[#13131866]">Location :</p>
+                        <h4 class="text-lg font-extrabold text-[#131318]">152/1 Mohakhali Wireless Gate</h4>
+                    </div>
+                    <!-- =========== Contact Info item 3 ============= -->
+                </div>
+                <!-- ========== Contact Info ============== -->
+
+                <!-- ========== Contact Form  ============== -->
+                <div class="col-auto lg:col-span-6">
+                    <form class="grid grid-cols-1 sm:grid-cols-12 gap-6">
+
+                        <!-- ========== Form Item 1 ============ -->
+                        <div class="col-auto sm:col-span-6">
+                            <label class="form-control w-full">
+                                <div class="label">
+                                    <span class="label-text text-xl font-bold text-[#131318]">Your Name</span>
+                                </div>
+                                <input type="text" placeholder="Enter your full name"
+                                    class="input input-bordered outline-0 focus:outline-none w-full border-0 bg-[#1313180A] text-base font-normal text-[#13131899]" />
+                            </label>
+                        </div>
+                        <!-- ========== Form Item 1 ============ -->
+
+                        <!-- ========== Form Item 2 ============ -->
+                        <div class="col-auto sm:col-span-6">
+                            <label class="form-control w-full">
+                                <div class="label">
+                                    <span class="label-text text-xl font-bold text-[#131318]">Your Email</span>
+                                </div>
+                                <input type="email" placeholder="Enter your email"
+                                    class="input text-base font-normal text-[#13131899] input-bordered outline-0 focus:outline-none w-full border-0 bg-[#1313180A]" />
+                            </label>
+                        </div>
+                        <!-- ========== Form Item 2 ============ -->
+
+                        <!-- ========== Form Item 3 ============ -->
+                        <div class="col-auto sm:col-span-6">
+                            <label class="form-control w-full">
+                                <div class="label">
+                                    <span class="label-text text-xl font-bold text-[#131318]">Subject</span>
+                                </div>
+                                <input type="text" placeholder="Enter your subject"
+                                    class="input input-bordered outline-0 focus:outline-none w-full border-0 bg-[#1313180A] text-base font-normal text-[#13131899]" />
+                            </label>
+                        </div>
+                        <!-- ========== Form Item 3 ============ -->
+
+                        <!-- ========== Form Item 4 ============ -->
+                        <div class="col-auto sm:col-span-6">
+                            <label class="form-control w-full">
+                                <div class="label">
+                                    <span class="label-text text-xl font-bold text-[#131318]">Phone Number</span>
+                                </div>
+                                <input type="text" placeholder="Enter your phone number"
+                                    class="input input-bordered outline-0 focus:outline-none w-full border-0 bg-[#1313180A] text-base font-normal text-[#13131899]" />
+                            </label>
+                        </div>
+                        <!-- ========== Form Item 4 ============ -->
+
+                        <!-- ========== Form Item 5 ============ -->
+                        <div class="col-auto sm:col-span-12">
+                            <label class="form-control">
+                                <div class="label">
+                                    <span class="label-text text-xl font-bold text-[#131318]">Message</span>
+                                </div>
+                                <textarea class="textarea textarea-bordered w-full h-52 focus:outline-none border-0 bg-[#1313180A] resize-none text-base font-normal text-[#13131899]" placeholder="Write your message"></textarea>
+                            </label>
+                        </div>
+                        <!-- ========== Form Item 5 ============ -->
+
+                        <input type="submit" value="Send Message" class="btn bg-primary-color text-white hover:bg-primary-color col-auto sm:col-span-12">
+                    </form>
+                </div>
+                <!-- ========== Contact Form  ============== -->
+
+                <!-- ========== Contact Social  ============== -->
+                <div class="col-auto lg:col-span-12 p-8 flex flex-col items-center bg-[#1313180A] rounded-xl gap-y-3">
+                    <h2 class="text-2xl text-[#131318] font-extrabold">Social Media</h2>
+
+                    <!-- Social Icon  -->
+                    <div class="flex gap-x-5">
+                        <a class="text-2xl font-extrabold text-[#131318]" href="https://www.facebook.com/codewithsaidulwr" target="_blank">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                        <a class="text-2xl font-extrabold text-[#131318]" href="https://www.instagram.com/codewithsaidul" target="_blank">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a class="text-2xl font-extrabold text-[#131318]" href="https://www.twitter.com/codewithsaidul" target="_blank">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <a class="text-2xl font-extrabold text-[#131318]" href="https://www.github.com/codewithsaidul" target="_blank">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                    </div>
+                </div>
+                <!-- ========== Contact Social  ============== -->
+            </div>
+        </section>
+        <!-- ===================== Contact Section End =================== -->
 
     </main>
     <!-- ======================= Main End ========================= -->
