--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         rel="stylesheet">
 
     <!-- ================= Font Awesome CDN Link ============= -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- ==================== Daisy Ui CDN Link ================== -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -1092,12 +1094,15 @@
                                 <div class="label">
                                     <span class="label-text text-xl font-bold text-[#131318]">Message</span>
                                 </div>
-                                <textarea class="textarea textarea-bordered w-full h-52 focus:outline-none border-0 bg-[#1313180A] resize-none text-base font-normal text-[#13131899]" placeholder="Write your message"></textarea>
+                                <textarea
+                                    class="textarea textarea-bordered w-full h-52 focus:outline-none border-0 bg-[#1313180A] resize-none text-base font-normal text-[#13131899]"
+                                    placeholder="Write your message"></textarea>
                             </label>
                         </div>
                         <!-- ========== Form Item 5 ============ -->
 
-                        <input type="submit" value="Send Message" class="btn bg-primary-color text-white hover:bg-primary-color col-auto sm:col-span-12">
+                        <input type="submit" value="Send Message"
+                            class="btn bg-primary-color text-white hover:bg-primary-color col-auto sm:col-span-12">
                     </form>
                 </div>
                 <!-- ========== Contact Form  ============== -->
@@ -1108,16 +1113,20 @@
 
                     <!-- Social Icon  -->
                     <div class="flex gap-x-5">
-                        <a class="text-2xl font-extrabold text-[#131318]" href="https://www.facebook.com/codewithsaidulwr" target="_blank">
+                        <a class="text-2xl font-extrabold text-[#131318]"
+                            href="https://www.facebook.com/codewithsaidulwr" target="_blank">
                             <i class="fa-brands fa-facebook"></i>
                         </a>
-                        <a class="text-2xl font-extrabold text-[#131318]" href="https://www.instagram.com/codewithsaidul" target="_blank">
+                        <a class="text-2xl font-extrabold text-[#131318]"
+                            href="https://www.instagram.com/codewithsaidul" target="_blank">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
-                        <a class="text-2xl font-extrabold text-[#131318]" href="https://www.twitter.com/codewithsaidul" target="_blank">
+                        <a class="text-2xl font-extrabold text-[#131318]" href="https://www.twitter.com/codewithsaidul"
+                            target="_blank">
                             <i class="fa-brands fa-twitter"></i>
                         </a>
-                        <a class="text-2xl font-extrabold text-[#131318]" href="https://www.github.com/codewithsaidul" target="_blank">
+                        <a class="text-2xl font-extrabold text-[#131318]" href="https://www.github.com/codewithsaidul"
+                            target="_blank">
                             <i class="fa-brands fa-github"></i>
                         </a>
                     </div>
@@ -1132,6 +1141,61 @@
 
 
     <!-- ===================== Footer Start ======================= -->
+    <footer class="footer p-10 lg:px-32 lg:py-28 bg-[#131318] text-white">
+        <aside class="text-center md:text-left">
+            <a class="text-xl sm:text-2xl md:text-4xl font-extrabold text-white text-center mx-auto md:mx-0"
+                href="index.html">Hockey
+                <span class="text-primary-color">'</span>s
+            </a>
+            <p class="text-base font-medium text-[#FFFFFF99] w-full md:w-[350px]">We believe in open communication. Our transparent pricing allows you to make informed decisions with
+                confidence.</p>
+
+            <div class="text-center mx-auto md:mx-0">
+                <h5 class="flex gap-x-3 items-center text-center text-base text-[#FFFFFFCC] font-medium">
+                    <i class="fa-regular fa-envelope text-2xl text-[#FF4240]"></i>
+                    hockeys@support.com
+                </h5>
+                <h5 class="flex gap-x-3 items-center text-center text-base text-[#FFFFFFCC] font-medium">
+                    <i class="fa-solid fa-phone text-2xl text-[#FF4240]"></i>
+                    (+62) 123-321-543
+                </h5>
+            </div>
+        </aside>
+
+        <div class="grid grid-cols-12 gap-6 lg:gap-x-16 mx-auto lg:mx-0">
+            <nav class="col-span-6 sm:col-span-4 space-y-5">
+                <header class="text-lg font-extrabold text-white">Company</header>
+                <div class="flex flex-col gap-3">
+                    <a href="#" class="text-base text-[#FFFFFF99] font-medium">About us</a>
+                    <a href="#" class="text-base text-[#FFFFFF99] font-medium">Leadership</a>
+                    <a href="#" class="text-base text-[#FFFFFF99] font-medium">Careers </a>
+                    <a href="#" class="text-base text-[#FFFFFF99] font-medium">News & Article</a>
+                    <a href="#" class="text-base text-[#FFFFFF99] font-medium">Legal Notice</a>
+                </div>
+            </nav>
+
+            <nav class="col-span-6 sm:col-span-4 space-y-5 w-full">
+                <header class="text-lg font-extrabold text-white">Support</header>
+                <div class="flex flex-col gap-3">
+                    <a href="#" class="text-base text-[#FFFFFF99] font-medium">Help Center</a>
+                    <a href="#" class="text-base text-[#FFFFFF99] font-medium">FAQ </a>
+                    <a href="#" class="text-base text-[#FFFFFF99] font-medium">Ticket Support </a>
+                    <a href="#" class="text-base text-[#FFFFFF99] font-medium"> Contact Us</a>
+                </div>
+            </nav>
+
+            <div class="col-span-12 sm:col-span-4 mx-auto sm:mx-0 space-y-5 text-center lg:text-left">
+                <header class="text-lg font-extrabold text-white">Services</header>
+                <div class="flex flex-col gap-3">
+                    <a href="#" class="text-base text-[#FFFFFF99] font-medium">Academy</a>
+                    <a href="#" class="text-base text-[#FFFFFF99] font-medium">Group Lesson</a>
+                    <a href="#" class="text-base text-[#FFFFFF99] font-medium">Private Lesson</a>
+                    <a href="#" class="text-base text-[#FFFFFF99] font-medium">Hockeys for kids</a>
+                    <a href="#" class="text-base text-[#FFFFFF99] font-medium">Hockeys for Adult</a>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- ====================== Footer End ======================== -->
 
 </body>
